# schemathesisTestingFakePerfectAPI

./: .gitignore  Dockerfile  README.md  main.py  openapi.yaml  pyproject.toml  render.yaml  requirements.txt  schemathesis.toml  uvicorn_app.sh
.github/workflows/: contract.yml
app/: __init__.py  db.py  main.py  models.py  schemas.py  security.py  version.py
app/routers/: __init__.py  echo.py  orders.py  status.py  users.py
openapi-static/: openapi.json
perfectapi/: __init__.py  app.py  warmup.py
tests/: test_app.py  test_openapi_contract.py  test_warmup.py
