[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfect-schema-api"
version = "1.0.0"
description = "Production-grade FastAPI project designed for contract testing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Contract QA Team", email = "qa@example.com" }]
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.25",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6,<3.0",
    "email-validator>=2.1",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.25,<0.28",
    "alembic>=1.12",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "isort>=5.13",
    "ruff>=0.3",
    "pytest>=7.4",
    "schemathesis>=4.3",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
